remplissage donné pres ok

--- a/src/main/webapp/app/entities/critereRecherche/critere-recherche.component.html
+++ b/src/main/webapp/app/entities/critereRecherche/critere-recherche.component.html
@@ -71,7 +71,7 @@
             </div> 
         </div> 
       </form>
-  <div *ngIf="isSearch==false">
+  <div *ngIf="critereRechercheService.isSearch==false">
       <div class=" col-sm-12">
           <div class="alert alert-info text-center">
               <p class="lead"  jhiTranslate="outilDiagnostic.critereRecherche.rechercheEnCours"></p>
