--- a/src/main/webapp/app/entities/personnels/personnels.component.html
+++ b/src/main/webapp/app/entities/personnels/personnels.component.html
@@ -31,13 +31,13 @@
   </ul>
 </div>
 <!--- onglet résume-->
-<div class="container">
+<div class="container-fluid mb-3">
     <div *ngIf="critereRechercheService.ongletActive=='resume'">
         <div class="row">
             <div class="col-sm-12 align-self-center">
                 <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapSirhen"></h4>
                 <div class="table-responsive">
-                    <table class="table table-sm table-striped">
+                    <table class="table table-sm table-striped table-bordered">
                         <thead class="thead-dark">
                             <tr>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.nom"></th>
@@ -45,7 +45,7 @@
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.birthday"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.position"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.libelle"></th>
-                                <th></th>
+                                <!--<th></th>-->
                             
                             </tr>
                         </thead>
@@ -57,7 +57,7 @@
                                         <td>{{personnel.dateNaissanceSirhen}}</td>
                                         <td>{{personnel.positionSirhen}}</td>
                                         <td>{{personnel.libelleSirhen}}</td>  
-                                        <td class="text-right"><a (click)="afficheDetail(personnel,'sirhen')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>
+                                       <!-- <td class="text-right"><a (click)="afficheDetail(personnel,'sirhen')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>-->
                                     </ng-template>
                                 </tr>
                             </tbody> 
@@ -67,7 +67,7 @@
             <div class="col-sm-12 align-self-center">
                 <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapEpp"></h4>
                 <div class="table-responsive">
-                    <table class="table table-sm table-striped">
+                    <table class="table table-sm table-striped table-bordered">
                         <thead class="thead-dark">
                             <tr>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.nom"></th>
@@ -75,18 +75,28 @@
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.birthday"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.position"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.libelle"></th>
-                                <th></th>
+                                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.infoComp"></th>
+                                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.grade"></th>
+                                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.numen"></th>
+                                <!--<th></th>-->
                             </tr>
                         </thead> 
                         <tbody>
                                 <tr *ngFor="let personnel of personnels">
-                                    <ng-template [ngIf]="personnel.nomEpp!=null|| personnel.prenomEpp!=null|| personnel.dateNaissanceEpp!=null|| personnel.positionEpp!=null|| personnel.libelleEpp!=null">
+                                    <ng-template [ngIf]="personnel.nomEpp!=null|| personnel.prenomEpp!=null|| personnel.dateNaissanceEpp!=null|| personnel.positionEpp!=null|| personnel.libelleEpp!=null || personnel.infoCompEpp.length>0 || personnel.gradeEpp!=null || personnel.numenEpp!=null">
                                         <td>{{personnel.nomEpp}}</td>
                                         <td>{{personnel.prenomEpp}}</td>
                                         <td>{{personnel.dateNaissanceEpp}}</td>
                                         <td>{{personnel.positionEpp}}</td>
-                                        <td>{{personnel.libelleEpp}}</td>  
-                                        <td class="text-right"><a (click)="afficheDetail(personnel,'epp')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>
+                                        <td>{{personnel.libelleEpp}}</td> 
+                                        <td *ngIf="personnel.infoCompEpp.length>0">
+                                            <tr *ngFor="let information of personnel.infoCompEpp ">
+                                                <td>{{information}}</td>
+                                            </tr>
+                                        </td> 
+                                        <td>{{personnel.gradeEpp}}</td>
+                                        <td>{{personnel.numenEpp}}</td>  
+                                       <!-- <td class="text-right"><a (click)="afficheDetail(personnel,'epp')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>-->
                                     </ng-template>
                                 </tr>
                             </tbody> 
@@ -96,7 +106,7 @@
             <div class="col-sm-12 align-self-center">
                 <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapEppPrive"></h4>
                 <div class="table-responsive">
-                    <table class="table table-sm table-striped">
+                    <table class="table table-sm table-striped table-bordered">
                         <thead class="thead-dark">
                             <tr>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.nom"></th>
@@ -104,7 +114,11 @@
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.birthday"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.position"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.libelle"></th>
-                                <th></th>
+                                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.infoComp"></th>
+                                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.grade"></th>
+                                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.numen"></th>
+                                
+                                <!--<th></th>-->
                             </tr>
                         </thead> 
                         <tbody>
@@ -114,8 +128,16 @@
                                         <td>{{personnel.prenomEppPrive}}</td>
                                         <td>{{personnel.dateNaissanceEppPrive}}</td>
                                         <td>{{personnel.positionEppPrive}}</td>
-                                        <td>{{personnel.libelleEppPrive}}</td>  
-                                        <td class="text-right"><a (click)="afficheDetail(personnel,'eppPrive')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>
+                                        <td>{{personnel.libelleEppPrive}}</td> 
+                                        <td *ngIf="personnel.infoCompEpp.length>0">
+                                                <tr *ngFor="let information of personnel.infoCompEppPrive ">
+                                                    <td>{{information}}</td>
+                                                </tr>
+                                            </td> 
+                                            <td>{{personnel.gradeEppPrive}}</td>
+                                            <td>{{personnel.numenEppPrive}}</td>  
+
+                                       <!-- <td class="text-right"><a (click)="afficheDetail(personnel,'eppPrive')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>-->
                                     </ng-template>
                                 </tr>
                             </tbody> 
@@ -126,7 +148,7 @@
             <div class="col-sm-12 align-self-center">
                 <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></h4>
                 <div class="table-responsive">
-                    <table class="table table-sm table-striped">
+                    <table class="table table-sm table-striped table-bordered">
                         <thead class="thead-dark">
                             <tr>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.nom"></th>
@@ -137,7 +159,7 @@
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.fonction"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.ville"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.discipline"></th>
-                                <th></th>
+                               <!-- <th></th>-->
                             </tr>
                         </thead>
                         <tbody>
@@ -151,7 +173,7 @@
                                         <td>{{personnel.fonctionAaf}}</td>  
                                         <td>{{personnel.villeAaf}}</td>  
                                         <td>{{personnel.disciplineAaf}}</td>  
-                                        <td class="text-right"><a (click)="afficheDetail(personnel,'aaf')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>
+                                       <!--<td class="text-right"><a (click)="afficheDetail(personnel,'aaf')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>-->
                                     </ng-template>
                                 </tr>
                             </tbody> 
@@ -161,7 +183,7 @@
             <div class="col-sm-12 align-self-center">
                 <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAgora"></h4>
                 <div class="table-responsive">
-                    <table class="table table-sm table-striped">
+                    <table class="table table-sm table-striped table-bordered">
                         <thead class="thead-dark">
                             <tr>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauAgora.nom"></th>
@@ -169,7 +191,7 @@
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauAgora.birthday"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauAgora.position"></th>
                                 <th jhiTranslate="outilDiagnostic.personnel.tableauAgora.libelle"></th>
-                                <th></th>
+                                <!--<th></th>-->
                             </tr>
                         </thead>
                         <tbody>
@@ -180,7 +202,7 @@
                                         <td>{{personnel.dateNaissanceAgora}}</td>
                                         <td>{{personnel.positionAgora}}</td>
                                         <td>{{personnel.libelleAgora}}</td>  
-                                        <td class="text-right"><a (click)="afficheDetail(personnel,'agora')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>
+                                        <!--<td class="text-right"><a (click)="afficheDetail(personnel,'agora')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>-->
                                     </ng-template>
                                 </tr>
                             </tbody>  
@@ -197,7 +219,7 @@
                     <div class="col-sm-12 align-self-center">
                         <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapSirhen"></h4>
                         <div class="table-responsive">
-                            <table class="table table-sm table-striped">
+                            <table class="table table-sm table-striped table-bordered">
                                 <thead class="thead-dark">
                                     <tr>
                                         <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.nom"></th>
@@ -232,7 +254,7 @@
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapEpp"></h4>
                     <div class="table-responsive">
-                        <table class="table table-sm table-striped">
+                        <table class="table table-sm table-striped table-bordered">
                             <thead class="thead-dark">
                                 <tr>
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.nom"></th>
@@ -240,6 +262,10 @@
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.birthday"></th>
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.position"></th>
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.libelle"></th>
+                                    <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.infoComp"></th>
+                                    <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.grade"></th>
+                                    <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.numen"></th>
+                                    <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.fonction"></th>
                                     <th></th>
                                 </tr>
                             </thead> 
@@ -251,6 +277,14 @@
                                             <td>{{personnel.dateNaissanceEpp}}</td>
                                             <td>{{personnel.positionEpp}}</td>
                                             <td>{{personnel.libelleEpp}}</td>  
+                                            <td *ngIf="personnel.infoCompEpp.length>0">
+                                                    <tr *ngFor="let information of personnel.infoCompEpp ">
+                                                        <td>{{information}}</td>
+                                                    </tr>
+                                                </td> 
+                                                <td>{{personnel.gradeEpp}}</td>
+                                                <td>{{personnel.numenEpp}}</td> 
+                                                <td>{{personnel.fonctionEpp}}</td> 
                                             <td class="text-right"><a (click)="afficheDetail(personnel,'epp')"  class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>
                                         </ng-template>
                                     </tr>
@@ -266,7 +300,7 @@
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapEppPrive"></h4>
                     <div class="table-responsive">
-                        <table class="table table-sm table-striped">
+                        <table class="table table-sm table-striped table-bordered">
                             <thead class="thead-dark">
                                 <tr>
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.nom"></th>
@@ -274,6 +308,9 @@
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.birthday"></th>
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.position"></th>
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.libelle"></th>
+                                    <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.infoComp"></th>
+                                    <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.grade"></th>
+                                    <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.numen"></th>
                                     <th></th>
                                 </tr>
                             </thead> 
@@ -284,7 +321,15 @@
                                             <td>{{personnel.prenomEppPrive}}</td>
                                             <td>{{personnel.dateNaissanceEppPrive}}</td>
                                             <td>{{personnel.positionEppPrive}}</td>
-                                            <td>{{personnel.libelleEppPrive}}</td>  
+                                            <td>{{personnel.libelleEppPrive}}</td> 
+                                            <td *ngIf="personnel.infoCompEpp.length>0">
+                                                    <tr *ngFor="let information of personnel.infoCompEppPrive ">
+                                                        <td>{{information}}</td>
+                                                    </tr>
+                                                </td> 
+                                                <td>{{personnel.gradeEppPrive}}</td>
+                                                <td>{{personnel.numenEppPrive}}</td>  
+     
                                             <td class="text-right"><a (click)="afficheDetail(personnel,'eppPrive')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.personnel.detail" class="fa fa-eye"></i></a></td>
                                         </ng-template>
                                     </tr>
@@ -299,7 +344,7 @@
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></h4>
                     <div class="table-responsive">
-                        <table class="table table-sm table-striped">
+                        <table class="table table-sm table-striped table-bordered">
                             <thead class="thead-dark">
                                 <tr>
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.nom"></th>
@@ -338,7 +383,7 @@
             <div class="col-sm-12 align-self-center">
                 <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAgora"></h4>
                 <div class="table-responsive">
-                        <table class="table table-sm table-striped">
+                        <table class="table table-sm table-striped table-bordered">
                             <thead class="thead-dark">
                                 <tr>
                                     <th jhiTranslate="outilDiagnostic.personnel.tableauAgora.nom"></th>
